--- a/package.json
+++ b/package.json
@@ -1,31 +1,20 @@
 {
-  "name": "sistema-rh-online-frontend",
+  "name": "hr-management-frontend",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "^5.0.0-alpha.153",
-    "@mui/material": "^5.13.0",
-    "@mui/x-data-grid": "^6.4.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
-    "chart.js": "^4.3.0",
-    "date-fns": "^2.30.0",
-    "formik": "^2.2.9",
-    "jwt-decode": "^3.1.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.11",
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.2",
-    "recharts": "^2.15.3",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.1.1"
+    "react-toastify": "^9.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
