--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 GENERATE_SOURCEMAP=false
-REACT_APP_API_URL=https://sistema-rh-backend-production.up.railway.app
+REACT_APP_API_URL=https://rh-backend-production.up.railway.app
