--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "recharts": "^2.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
