--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,17 @@
 {
   "rewrites": [
-    { "source": "/(.* )", "destination": "/index.html" }
+    {
+      "source": "/api/:path*",
+      "destination": "https://sistema-rh-backend-production.up.railway.app/api/:path*"
+    }
   ],
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/(.* )",
       "headers": [
-        { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "X-Frame-Options", "value": "DENY" },
-        { "key": "X-XSS-Protection", "value": "1; mode=block" }
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With,Content-Type,Authorization" }
       ]
     }
   ]
